added carrierwave logo upload to users

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+/config/initializers/app_keys.rb
+/public/uploads/*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
