--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,20 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Created by https://www.gitignore.io/api/linux
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
