Have CircleCi update bundler before running

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,10 @@ machine:
     version:
       '2.3'
 
+dependencies:
+  pre:
+    - gem install bundler --pre
+
 ## Customize test commands
 test:
   post:
