--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,8 +2,6 @@ AllCops:
   TargetRubyVersion: 2.3
 
   Exclude:
-    # You could specify set of files or dirs while you want to be ignored by rubocop
-
     - 'vendor/**/*'
     - 'spec/**/*'
     - 'config/**/*'
@@ -13,13 +11,14 @@ AllCops:
     - 'Gemfile'
     - 'Gemfile.lock'
     - 'Rakefile'
+
 Documentation: # Disabling documentation cop
   Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Style/MethodLength:
+Metrics/MethodLength:
   Max: 20
 
 Metrics/AbcSize:
